Fixing spacing at bottom of article detail view. Figcaptions made simpler.

--- a/source/assets/scss/modules/images.scss
+++ b/source/assets/scss/modules/images.scss
@@ -5,9 +5,9 @@
 @import '../mixins/colors';
 @import '../mixins/functions';
 
-
+// these are often created by article.js
 figure {
-    margin: 0.5rem 0 1rem 0;
+    margin: 1rem 0 1.5rem 0;
 }
 figcaption{
     font: {
@@ -17,12 +17,12 @@ figcaption{
     }
     color: black(0.6);
     margin: rem-calc(10px) 0 1rem 0;
-    padding: 0.5rem;
+    // padding: 0.5rem;
     &.caption { // for js-injected captions below images
         color: black;
         margin-top: 0;
-        padding: 0.6rem 1rem;
-        background-color: $gray-11;
+        padding: 0.6rem 0;
+        // background-color: $gray-11;
         display: inline-block;
     }
 }
